Fix the blog post page by closing an anchor due to overlapping with footer links

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -87,10 +87,6 @@
        letter-spacing: 1px;
        font-size:100%;
       }
- 
-      #colored a:hover {
-        color: rgb(243, 206, 206);
-      }
   
       /* Galery */
 
@@ -297,7 +293,7 @@
   }
 
   h3, p {
-      margin: 10px 0;
+      margin: 20px auto;
   }
 
   /* end post list styles*/
